--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@
     </div>
 
     <script src="js/projects.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/styles.js"></script>
 </body>
 </html> 
